log-output/manifests/1.07/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-1-07-svc
spec:
  type: ClusterIP
  selector:
    app: log-output-1-07
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8090
