log-output/manifests/1.07/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output-1-07-ing
  namespace: applications
spec:
  rules:
    - http:
        paths:
          - path: /log-output/1.07
            pathType: Prefix
            backend:
              service:
                name: log-output-1-07-svc
                port:
                  number: 2345
